--- a/picasso-frontend/package.json
+++ b/picasso-frontend/package.json
@@ -2,6 +2,9 @@
   "name": "svelte-app",
   "version": "1.0.0",
   "devDependencies": {
+    "fa-svelte": "^3.1.0",
+    "node-sass": "^4.13.0",
+    "npm-run-all": "^4.1.5",
     "rollup": "^1.12.0",
     "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-livereload": "^1.0.0",
@@ -11,12 +14,20 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.0",
     "sirv-cli": "^0.4.4"
   },
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public --single",
-    "start:dev": "sirv public --single --dev"
+    "build": "run-s build:src build:sass",
+    "build:src": "rollup -c ./rollup.config.js",
+    "build:sass": "node-sass src/bootstrap/bootstrap.scss public/dist/bootstrap.css",
+    "autobuild:src": "rollup -w -c ./rollup.config.js",
+    "autobuild:sass": "node-sass --recursive --watch src/bootstrap/bootstrap.scss public/dist/bootstrap.css",
+    "dev": "run-p build start:dev autobuild:src autobuild:sass",
+    "start": "sirv public --single --host 0.0.0.0",
+    "start:dev": "sirv public --dev --host 0.0.0.0 --port 5000"
   }
 }
