--- a/picasso-frontend/package.json
+++ b/picasso-frontend/package.json
@@ -14,6 +14,7 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
