--- a/picasso-backend/requirements.txt
+++ b/picasso-backend/requirements.txt
@@ -4,11 +4,17 @@
 #
 #    pip-compile
 #
+certifi==2019.9.11        # via requests
+chardet==3.0.4            # via requests
 click==7.0                # via flask
 flask-sqlalchemy==2.4.1
 flask==1.1.1
+idna==2.8                 # via requests
 itsdangerous==1.1.0       # via flask
 jinja2==2.10.3            # via flask
 markupsafe==1.1.1         # via jinja2
+requests==2.22.0
 sqlalchemy==1.3.11        # via flask-sqlalchemy
+urllib3==1.25.7           # via requests
+uwsgi==2.0.18
 werkzeug==0.16.0          # via flask
