--- a/picasso-frontend/package.json
+++ b/picasso-frontend/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "svelte-app",
+  "name": "Picasso",
+  "description": "An image viewer",
+  "author": "Arjun Sadanand",
   "version": "1.0.0",
   "devDependencies": {
+    "@rollup/plugin-replace": "^2.2.1",
     "fa-svelte": "^3.1.0",
     "node-sass": "^4.13.0",
     "npm-run-all": "^4.1.5",
@@ -28,7 +31,7 @@
     "autobuild:src": "rollup -w -c ./rollup.config.js",
     "autobuild:sass": "node-sass --recursive --watch src/bootstrap/bootstrap.scss public/dist/bootstrap.css",
     "dev": "run-p build start:dev autobuild:src autobuild:sass",
-    "start": "sirv public --single --host 0.0.0.0",
+    "start": "sirv public --single --host 0.0.0.0 --port 5000",
     "start:dev": "sirv public --dev --host 0.0.0.0 --port 5000"
   }
 }
